# bunny

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  bunny.config.toml  package.json  tsconfig.json  typedoc.json
.github/workflows/: ci.yml  release.yml
client/: package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/ui/: index.html  setup.js  style.css
docs/: README.md  errors.md  http-api.md  styleguide.md  tools.md
docs/adr/: 0001-bun-runtime.md  0002-openai-compat-adapter.md  0003-sqlite-fts5-vec-hybrid.md  0004-bunqueue-as-spine.md  0005-streaming-reasoning.md  0006-web-ui.md  0007-auth-and-users.md  0008-projects.md  0009-agents.md  0010-project-boards.md  0011-scheduled-tasks.md  0013-agent-skills.md  0014-dashboard.md  0015-whiteboards.md  0016-documents.md  0017-tauri-client.md  0018-web-tools.md  0021-knowledge-base-definitions.md  0022-multi-language-translation.md  0023-chat-quick-chats-fork-edit-regen.md  0024-web-news.md  0026-ask-user-question-tool.md  0027-user-notifications.md  0028-telegram-integration.md  0030-code-sub-application.md  0032-workflows-subsystem.md  0033-bun-native-code-graph.md  0034-per-user-agent-memory.md  0035-llm-concurrency-gate.md  (+6 more)
docs/dev/: README.md  (+2 more)
electron/: main.js  package.json  preload.js
scripts/: build.ts  docs-check.ts  i18n-check.ts
src/: config.ts  index.ts  paths.ts
tests/: config.test.ts  paths.test.ts  smoke.test.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+742 files in other folders)
